@@ -26,6 +26,8 @@ GeneWeb version 2.05
     and 3 characters for the extension, to be unzippable by "pkunzip".
 
 * GeneWeb Daemon/CGI (gwd)
+  - [Aug 6, 99] Restored the system of robot exclusion (had been deleted
+    in version 1.10) with some improvements.
   - [Aug 5, 99] Added descendants displaying by tree (doesn't work with Lynx).
   - [Aug 3, 99] Added ancestors displaying (and navigating) by tree.
   - [Aug 3, 99] In relationship by branches, found a solution to
